@@ -684,7 +684,7 @@ $pgv_lang["um_bu_help"] = "~#pgv_lang[um_backup]#~<br /><br />#pgv_lang[um_bu_ex
 $pgv_lang["um_bu_config"] = "PhpGedView Configuration File";
 $pgv_lang["um_bu_gedcoms"] = "GEDCOM Files";
 $pgv_lang["um_bu_gedsets"] = "GEDCOM Settings, Configuration and Privacy files";
-$pgv_lang["um_bu_logs"] = "GEDCOM Counters, SearchLogs and PhpGedView Logfiles";
+$pgv_lang["um_bu_logs"] = "GEDCOM SearchLogs and PhpGedView Logfiles";
 $pgv_lang["um_bu_usinfo"] = "User definitions, Block settings, Favorites, Messages, News";
 $pgv_lang["um_bu_media"]	= "Media files";
 $pgv_lang["um_mk_bu"] = "Make Backup";
